# float_plus

./: Cargo.toml  README.md
src/: approx_eq.rs  decimals.rs  lib.rs  not_approx_eq.rs  round_float.rs  significant_figures.rs
src/decimals/: approx_eq_dec.rs  not_approx_eq_dec.rs  round_dec.rs
src/significant_figures/: approx_eq_sf.rs  not_approx_eq_sf.rs  round_float_sf.rs  round_sf.rs
