[package]
name = "float_plus"
version = "1.1.2"
edition = "2021"
description = "Additional features for float values"
license = "MIT OR Apache-2.0"
rust-version = "1.80.0"

[dependencies]
anyhow = "1.0.86"
cast = "0.3.0"
num-traits = "0.2.19"

[lints.clippy]
let_and_return = "allow"
module_name_repetitions = "allow"
similar_names = "allow"
must_use_candidate = "allow"
missing_inline_inpublic_items = "allow"
std_instead_of_core = "allow"
non_exhaustive_structs = "allow"
mod_module_files = "allow"
self_named_module_files = "allow"

pedantic = {level = "warn", priority = -1}

[features]
no_std = []
